deploy/examples/3scale/3scale-backend.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: service-entry-threescale-backend
  namespace: istio-system
spec:
  hosts:
  - backend.3scale.svc.cluster.local
  # TODO: Remove endpoints
  endpoints:
  - address: backend.3scale.svc.cluster.local
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: 3scale
  labels:
    3scale: backend
spec:
  selector:
    matchLabels:
      3scale: backend
  template:
    metadata:
      labels:
        3scale: backend
    spec:
      containers:
      - name: wiremock
        image: rbillon59/wiremock-loadtest:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wiremock-mapping
          mountPath: /home/wiremock/mappings
      volumes:
      - name: wiremock-mapping
        configMap:
          name: wiremock-mapping-3scale-backend
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: 3scale
  labels:
    3scale: backend
spec:
  type: ClusterIP
  selector:
    3scale: backend
  ports:
  - port: 80
    targetPort: 8080
