deploy/examples/3scale/3scale-system.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: service-entry-threescale-saas-system
  namespace: istio-system
spec:
  hosts:
  - system.3scale.svc.cluster.local
  endpoints:
  - address: system.3scale.svc.cluster.local
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: DNS
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system
  namespace: 3scale
  labels:
    3scale: system
spec:
  selector:
    matchLabels:
      3scale: system
  template:
    metadata:
      labels:
        3scale: system
    spec:
      containers:
      - name: wiremock
        image: rbillon59/wiremock-loadtest:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wiremock-mapping
          mountPath: /home/wiremock/mappings
      volumes:
      - name: wiremock-mapping
        configMap:
          name: wiremock-mapping-3scale-system
---
apiVersion: v1
kind: Service
metadata:
  name: system
  namespace: 3scale
  labels:
    3scale: system
spec:
  type: ClusterIP
  selector:
    3scale: system
  ports:
  - port: 80
    targetPort: 8080
